# TradingSystem

./: CMakeLists.txt  README.md  inquiries.txt  marketdata.txt  note.docx  prices.txt  trades.txt
data/: data_generator.ipynb  data_generator.py  util.py
outputs/: allinquiries.txt  executions.txt  gui.txt  positions.txt  risk.txt
tradingsystem/: Source.cpp  bondstaticdata.hpp  products.hpp  soa.hpp  util.hpp
tradingsystem/executionservice/: executionservice.hpp
tradingsystem/guiservice/: guiservice.hpp
tradingsystem/historicaldataservice/: historicaldataservice.hpp
tradingsystem/inquiryservice/: inquiryservice.hpp  main.cpp
tradingsystem/marketdataservice/: main.cpp  marketdataservice.hpp
tradingsystem/pricingservice/: main.cpp  pricingservice.hpp
tradingsystem/streamingservice/: algostreamingservice.hpp  streamingservice.hpp
tradingsystem/tradebookingservice/: main.cpp  positionservice.hpp  riskservice.hpp  tradebookingservice.hpp
